*SVN*

* Call Inflector#demodulize on the class name when eagerly including an STI model.  Closes #5077 [info@loobmedia.com]

* Preserve MySQL boolean column defaults when changing a column in a migration. Closes #5015. [pdcawley@bofh.org.uk] 

* PostgreSQL: migrations support :limit with :integer columns by mapping limit < 4 to smallint, > 4 to bigint, and anything else to integer. #2900 [keegan@thebasement.org]

* Dates and times interpret empty strings as nil rather than 2000-01-01. #4830 [kajism@yahoo.com]

* Allow :uniq => true with has_many :through associations. [Jeremy Kemper]

* Ensure that StringIO is always available for the Schema dumper. [Marcel Molina Jr.]

* Allow AR::Base#to_xml to include methods too. Closes #4921. [johan@textdrive.com] 

* Replace superfluous name_to_class_name variant with camelize. [Marcel Molina Jr.]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Remove duplicate fixture entry in comments.yml. Closes #4923. [Blair Zajac <blair@orcaware.com>]

* Update FrontBase adapter to check binding version. Closes #4920. [mlaster@metavillage.com] 

* New Frontbase connections don't start in auto-commit mode. Closes #4922. [mlaster@metavillage.com]

* When grouping, use the appropriate option key. [Marcel Molina Jr.]

* Only modify the sequence name in the FrontBase adapter if the FrontBase adapter is actually being used. [Marcel Molina Jr.]

* Add support for FrontBase (http://www.frontbase.com/) with a new adapter thanks to the hard work of one Mike Laster. Closes #4093. [mlaster@metavillage.com]

* Add warning about the proper way to validate the presence of a foreign key. Closes #4147. [Francois Beausoleil <francois.beausoleil@gmail.com>]

* Fix syntax error in documentation. Closes #4679. [mislav@nippur.irb.hr] 

* Add Oracle support for CLOB inserts. Closes #4748. [schoenm@earthlink.net sandra.metz@duke.edu] 
